[APPBUG-2617] Bugs with New Global Nav with CSS3 Reduced z-index for "ddpp-ribbon", because it was causing issues with New Global Nav
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@29682 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/srch/srch.css
+++ b/projects/Media/docroot/assets/css/srch/srch.css
@@ -182,7 +182,7 @@
   position:absolute;
   top:-8px;
   left:-7px;
-  z-index:500;
+  z-index:10;
 }
 
 .srch .ddpp-list{
